<resources>
    <string name="app_name">App Gestor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btnCliente">Clientes</string>
    <string name="btnPedido">Pedidos</string>
    <string name="btnCobro">Cobranza</string>
    <string name="btnConfig">Nuevo Cliente</string>
    <string name="btnEditar">Editar</string>
    <string name="btnEliminar">Eliminar</string>

    //Pantalla pedidos XML string
    <string name="numero_pedido">Número de Pedido</string>
    <string name="id_cliente">ID Cliente</string>
    <string name="cantidad">Cantidad</string>

    <string name="kilos">Total Kg</string>
    <string name="precio">Total Monto</string>

    <string name="guardar_pedido">Guardar Pedido</string>
    <string name="btnNuevoPedido">Nuevo Pedido</string>
    <string name="btnNuevaDeuda">Registrar Deuda</string>
    <string name="btnCobroCliente">Nueva Cobranza</string>
    <string name="btnNuevaCarga">Nueva Carga</string>
    <string name="btnHistorialCobro">Historial de Cobranza</string>

    //Pantalla Nuevo CARGA
    <string name="guardar_carga">Guardar Carga</string>
    <string name="fecha">Fecha de Carga</string>
    <string name="acantidad">Cantidad Total</string>
    <string name="descripcion">Descripcion de la carga</string>
        //Pantalla Nuevo Cliente
    <string name="nombre">Nombre</string>
    <string name="precio_kilo">Precio/kilo</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="editar_cliente">Editar Cliente</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
</resources>