<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/btnCliente"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/btnCliente" />
        <item
            android:id="@+id/btnPedido"
            android:icon="@drawable/outline_add_notes_24"
            android:title="@string/btnPedido" />
        <item
            android:id="@+id/btnCobro"
            android:icon="@drawable/rounded_account_balance_wallet_24"
            android:title="@string/btnCobro" />
        <item
            android:id="@+id/btnNuevaCarga"
            android:icon="@drawable/outline_add_notes_24"
            android:title="@string/btnNuevaCarga" />
        <item
            android:id="@+id/btnConfig"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/btnConfig" />
        <item
            android:id="@+id/btnNuevoPedido"
            android:icon="@drawable/outline_add_notes_24"
            android:title="@string/btnNuevoPedido" />
    </group>
</menu>