<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btnNuevaCarga"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="Nueva Carga"/>
    <item
        android:id="@+id/btnConfig"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/btnConfig" />
    <item
        android:id="@+id/btnNuevoPedido"
        android:icon="@drawable/outline_add_notes_24"
        android:title="@string/btnNuevoPedido" />
    <item
        android:id="@+id/btnCobroCliente"
        android:icon="@drawable/logo_cobro"
        android:title="@string/btnCobroCliente" />
    <item
        android:id="@+id/btnHistorialCobro"
        android:icon="@drawable/rounded_account_balance_wallet_24"
        android:title="@string/btnHistorialCobro" />
</menu>