<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editNroPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero_pedido"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/editCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/cantidad"
            android:inputType="number" />

        <EditText
            android:id="@+id/editKilos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/kilos"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/precio"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnGuardarPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/guardar_pedido" />
    </LinearLayout>

</ScrollView>