<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:inputType="text" />

        <EditText
            android:id="@+id/editFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editCantidadTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cantidad"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp"/>

        <Button
            android:id="@+id/btnGuardarCarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_carga"
            android:layout_marginTop="20dp"/>

        <!-- LISTA DE CARGAS -->
        <ListView
            android:id="@+id/listaCargas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>